[package]
name = "tdiag"
version = "0.2.1-pre"
authors = ["Andrea Lattuada <andrea@lattuada.me>"]
homepage = "https://github.com/TimelyDataflow/diagnostics"
repository = "https://github.com/TimelyDataflow/diagnostics.git"
description = "Tools to inspect a timely-dataflow computation"
license = "MIT"

edition = "2018"

[dependencies]
timely = "^0.11"
differential-dataflow = "^0.11"
clap = "^2.33"
# tdiag-connect = "^0.2"
tdiag-connect = { path = "../connect" }

[patch.crates-io]
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-2", rev = "4431abba" }
dogsdogsdogs = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-2", rev = "4431abba" }
timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-2", rev = "7b49eba2" }
timely_bytes = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-2", rev = "7b49eba2" }
timely_communication = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-2", rev = "7b49eba2" }
timely_logging = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-2", rev = "7b49eba2" }
